
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,...) ;

void dump_hex(void *buf, unsigned int size){
 int i, *p;

 p = buf;

 printf("\n");

 for(i = 0; (i * sizeof(int)) < size; i++)
  printf("0x%.08x ", p[i]);
}
